2009-12-13  Thomas Vander Stichele  <thomas at apestaart dot org>

	* python/mushin/extern/paisley/couchdb.py:
	  Merged revision 24 of my object-views branch, updating view
	  URL to 0.10

2009-12-13  Thomas Vander Stichele  <thomas at apestaart dot org>

	* couchdb/views/contexts (added):
	* couchdb/views/contexts/reduce.js (added):
	* couchdb/views/contexts/map.js (added):
	  Add a list of contexts.
	* python/mushin/common/app.py:
	  Add functions to get contexts and projects.
	* python/mushin/maemo/new.py:
	  Query list of projects and contexts for selector.
	* python/mushin/maemo/start.py:
	  Add add_projects/contexts; use them to set examples from main.

2009-12-13  Thomas Vander Stichele  <thomas at apestaart dot org>

	* couchdb/views/by-status/map.js:
	* python/mushin/common/app.py:
	* python/mushin/maemo/start.py:
	  Fix up status, add next action.

2009-12-13  Thomas Vander Stichele  <thomas at apestaart dot org>

	* couchdb/views/by-status/map.js:
	  Add a new view.
	* python/mushin/common/app.py:
	  Add waitingfor getters.

2009-12-12  Thomas Vander Stichele  <thomas at apestaart dot org>

	* python/mushin/common/format.py (added):
	  Extract and refactor a deadline string.
	* python/mushin/command/display.py:
	  Use that now.

2009-12-12  Thomas Vander Stichele  <thomas at apestaart dot org>

	* python/mushin/common/app.py:
	  add methods to get things and their count by due/overdue/today
	* python/mushin/maemo/show.py:
	  show more things, like covey items, flags, due, ...
	* python/mushin/maemo/start.py:
	  Add 3 lists.

2009-12-12  Thomas Vander Stichele  <thomas at apestaart dot org>

	* python/mushin/model/couch.py:
	  move import in.

2009-12-12  Thomas Vander Stichele  <thomas at apestaart dot org>

	* python/mushin/command/display.py:
	  Remove unused function.

2009-12-12  Thomas Vander Stichele  <thomas at apestaart dot org>

	* couchdb/views/open-things-by-urgency/map.js:
	  Don't emit whole doc.
